# scikit-learn-stubs

./: README.md  pyproject.toml
sklearn-stubs/: _typing.pyi  pipeline.pyi
sklearn-stubs/datasets/: _base.pyi  _samples_generator.pyi
sklearn-stubs/model_selection/: _split.pyi
